# fraudlens

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  GEMINI.md  LICENSEtree  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_eda_ieee_cis.ipynb  02_xgboost_baseline.ipynb  03_shap_analysis.ipynb
scripts/: build_rag_index.py  create_test_scenarios.py  critical_agent_healthcheck.py  critical_agent_history.py  enrich_scenarios.py  healthcheck.py  investigator_agent_healthcheck.py  investigator_agent_history.py  run_integration_test.py  sar_agent_healthcheck.py  sar_agent_history.py
src/fraudlens/agents/: critical.py  graph.py  investigation.py  sar_generator.py  synthesizer.py
src/fraudlens/agents/tools/: adverse_media_search.py  customer_history.py  explain_ml_score.py  geolocation.py  merchant_rep.py  network_analysis.py  regulatory_rag.py  similar_patterns.py
src/fraudlens/api/: deps.py
src/fraudlens/api/routers/: transactions.py
src/fraudlens/core/: config.py  exceptions.py  logging.py
src/fraudlens/db/: models.py  session.py
src/fraudlens/db/migrations/: env.py
src/fraudlens/db/migrations/versions/: 21dc4b215a20_create_decisions_table.py  b7e2d4f1a039_expand_decisions_table.py  c8a3f1d29b04_add_sar_report_column.py  e9f0a1b2c3d4_add_healthcheck_runs_table.py
src/fraudlens/ml/: feature_extractor.py  model.py  preprocessor.py  shap_vocab.py
src/fraudlens/rag/: chunker.py  embedder.py  loader.py  retriever.py  store.py
src/fraudlens/schemas/: decision.py  investigation.py  sar.py  transaction.py
tests/unit/: test_exceptions.py
