[project]
name = "fraudlens"
version = "0.1.0"
description = "Multi-agent fraud detection system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic[email]",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "redis",
    "httpx",
    "structlog",
    "python-dotenv",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "numpy>=2.4.4",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
    "optuna>=4.8.0",
    "mlflow>=3.11.1",
    "jupyter>=1.1.1",
    "ipykernel>=7.2.0",
    "shap==0.45.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraudlens"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = [
    "pandas",
    "pandas.*",
    "numpy",
    "numpy.*",
    "sklearn.*",
    "xgboost.*",
    "shap.*",
    "mlflow.*",
    "optuna.*",
    "matplotlib.*",
]
ignore_missing_imports = true
